# Release Notes v3.2.8

### 🐛 Bug Fixes
- **Shelf Hover Detection**: Fixed an issue where hovering over files in the shelf would only trigger on the upper half of the file icon. The interaction area now correctly covers the entire file.