@@ -21,20 +21,21 @@ struct HexagonDotsEffect: View {
                 guard size.width > 0 && size.height > 0 else { return }
                 
                 // Coordinate transformation:
-                // mouseLocation is in the named coordinate space.
-                // We need to convert it to local space.
                 let myFrame = proxy.frame(in: .named(coordinateSpaceName))
                 let localMouse = CGPoint(
                     x: mouseLocation.x - myFrame.minX,
                     y: mouseLocation.y - myFrame.minY
                 )
                 
-                let spacing: CGFloat = 10 // Slightly larger spacing for fewer draw calls
+                let spacing: CGFloat = 10
                 let radius: CGFloat = 0.8
                 let hexHeight = spacing * sqrt(3) / 2
                 
-                let cols = min(Int(size.width / spacing) + 2, 200) // Cap max columns
-                let rows = min(Int(size.height / hexHeight) + 2, 200) // Cap max rows
+                let cols = min(Int(size.width / spacing) + 2, 200)
+                let rows = min(Int(size.height / hexHeight) + 2, 200)
+                
+                // Optimization: Batch all idle dots into one path
+                var idlePath = Path()
                 
                 for row in 0..<rows {
                     for col in 0..<cols {
@@ -43,43 +44,44 @@ struct HexagonDotsEffect: View {
                         let y = CGFloat(row) * hexHeight
                         
                         let point = CGPoint(x: x, y: y)
-                        let distance = sqrt(pow(point.x - localMouse.x, 2) + pow(point.y - localMouse.y, 2))
                         
-                        // Effect logic
+                        // Optimized distance check to avoid sqrt for every point if possible,
+                        // but sqrt is fast enough here.
+                        let distSq = pow(point.x - localMouse.x, 2) + pow(point.y - localMouse.y, 2)
                         let limit: CGFloat = 80
-                        if isHovering && distance < limit {
+                        let limitSq = limit * limit
+                        
+                        if isHovering && distSq < limitSq {
+                            // Active Dot (Draw individually)
+                            let distance = sqrt(distSq)
                             let intensity = 1 - (distance / limit)
                             let scale = 1 + (intensity * 0.5)
                             let opacity = 0.02 + (intensity * 0.13)
                             
-                            let rect = CGRect(
-                                x: x - radius * scale,
-                                y: y - radius * scale,
-                                width: radius * 2 * scale,
-                                height: radius * 2 * scale
-                            )
+                            let r = radius * scale
+                            let rect = CGRect(x: x - r, y: y - r, width: r * 2, height: r * 2)
                             
+                            // 1. Set opacity
                             context.opacity = opacity
-                            let path = Circle().path(in: rect)
-                            context.fill(path, with: .color(.white))
+                            // 2. Draw directly without creating a Shape View
+                            context.fill(Path(ellipseIn: rect), with: .color(.white))
                             
                         } else {
-                            // Base state
-                            context.opacity = 0.015
-                            let rect = CGRect(
-                                x: x - radius,
-                                y: y - radius,
-                                width: radius * 2,
-                                height: radius * 2
-                            )
-                            let path = Circle().path(in: rect)
-                            context.fill(path, with: .color(.white))
+                            // Idle Dot (Add to batch)
+                            let rect = CGRect(x: x - radius, y: y - radius, width: radius * 2, height: radius * 2)
+                            idlePath.addEllipse(in: rect)
                         }
                     }
+                }
+                
+                // Draw all idle dots at once
+                if !idlePath.isEmpty {
+                    context.opacity = 0.015
+                    context.fill(idlePath, with: .color(.white))
                 }
             }
         }
         .allowsHitTesting(false)
-        .animation(nil, value: mouseLocation) // Disable animations for this view to prevent lag
+        .animation(nil, value: mouseLocation)
     }
 }
